--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,21 @@
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
+    "draft-js": "^0.11.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "slate": "^0.112.0",
+    "slate-react": "^0.112.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
