--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "draft-js": "^0.11.7",
+    "firebase": "^11.2.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-awesome-spinners": "^1.3.1",
