--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon Server/index.js",
     "client": "npm run dev --prefix ./client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "npm install && npm install --prefix ./client && npm run build --prefix ./client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
